# book-recommender-chatbot-with-streamlit

./: .gitignore  README.md  pyproject.toml
evaluation/: eval_queries.json
notebook/: distrib_and_reco_analysis.ipynb  embeddings_reco_analysis.ipynb  tfidf_reco_analysis.ipynb  v5_evaluation.ipynb
src/: chroma.py  embeddings.py  evaluator.py  generator.py  main.py  recommender.py  tfidf.py
streamlit-app/: app.py
